--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@
   font-family: "Poppins", sans-serif;
 }
 
+body {
+  background: #FFFFFF;
+}
+
 /* HTML: <div class="loader"></div> */
 .loader {
   width: 50px;
